removed additional border and spacing included due to earlier rebase issue

--- a/lms/static/sass/multicourse/_dashboard.scss
+++ b/lms/static/sass/multicourse/_dashboard.scss
@@ -301,8 +301,6 @@
 
       .course-item {
         margin-bottom: $baseline;
-        border-bottom: 4px solid $border-color-l4;
-        padding-bottom: $baseline;
 
         .course-container{
           border: 1px solid $border-color-l4;
